--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".NavigationModule.NavigationActivity"/>
+        <activity android:name=".NavigationModule.MapboxActivity"/>
     </application>
 
 </manifest>
