--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
 
         <activity android:name=".NavigationModule.MapboxActivity"/>
+        <activity android:name=".NavigationWorkersModule.MapboxWorkers"/>
     </application>
 
 </manifest>
