--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
 
     //mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.0'
@@ -79,4 +80,5 @@ dependencies {
 }
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
