--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.canis">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WorkersInformationModule.WorkersActivity"/>
+        <activity android:name=".Places.Information.PlacesActivity"></activity>
+        <activity android:name=".WorkersInformationModule.WorkersActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -24,9 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".NavigationModule.MapboxActivity"/>
-        <activity android:name=".NavigationWorkersModule.MapboxWorkers"/>
+        <activity android:name=".NavigationModule.MapboxActivity" />
+        <activity android:name=".NavigationWorkersModule.MapboxWorkers" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
