Integration building information

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.canis">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Places.Information.PlacesActivity"></activity>
+        <activity android:name=".BeaconModule.BeaconInformationModule.BeaconInformationActivity"></activity>
+        <activity android:name=".Places.Information.PlacesActivity" />
         <activity android:name=".WorkersInformationModule.WorkersActivity" />
         <activity
             android:name=".MainActivity"
@@ -27,16 +33,7 @@
         <activity android:name=".BeaconModule.BeaconNavigationModule.BeaconNavigationActivity" />
 
         <service android:name=".BeaconModule.BeaconService" />
-
-        <service android:name="com.kontakt.sdk.android.ble.service.ProximityService"/>
+        <service android:name="com.kontakt.sdk.android.ble.service.ProximityService" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-
 
 </manifest>
